--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ description: >-                        # used by seo meta and the atom feed
   A minimal, responsive, and powerful Jekyll theme for presenting professional writing.
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: ''
+url: 'https://h4y3j1n.github.io/'
 
 github:
   username: H4Y3J1N             # change to your github username
